src/objects/LBI__Play__c.object
<CustomObject>
    <fields>
        <fullName>LBI__AllAvailable__c</fullName>
        <label>All Available</label>
        <summarizedField>LBI__PlayRun__c.LBI__Available__c</summarizedField>
        <summaryForeignKey>LBI__PlayRun__c.LBI__Play__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__Available__c</fullName>
        <formula>LBI__LatestPlayRun__r.LBI__Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__AverageProbability__c</fullName>
        <label>Average Probability</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LBI__CampaignId__c</fullName>
        <formula>LBI__Campaign__c</formula>
        <label>Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayName__c</fullName>
        <label>Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Errors__c</fullName>
        <formula>LBI__LatestPlayRun__r.LBI__Errors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ExpireJobID__c</fullName>
        <label>ExpireJobID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ExpireOldPlayRuns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire Old Play Runs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__LatestPlayRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Play Run</label>
        <referenceTo>LBI__PlayRun__c</referenceTo>
        <relationshipName>Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__PlayIdSortable__c</fullName>
        <formula>VALUE(LBI__PlayId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__PlayId__c</fullName>
        <externalId>true</externalId>
        <label>Play Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__PlayRunDaysOld__c</fullName>
        <formula>ROUND(NOW() - LBI__LatestPlayRun__r.LBI__RunDate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play Run Days Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__PlayType__c</fullName>
        <label>Play Type</label>
        <referenceTo>LBI__PlayType__c</referenceTo>
        <relationshipName>Plays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Qualified__c</fullName>
        <formula>LBI__LatestPlayRun__r.LBI__Qualified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Total__c</fullName>
        <formula>LBI__LatestPlayRun__r.LBI__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Play</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__PlayIdSortable__c</columns>
        <columns>LBI__Description__c</columns>
        <columns>LBI__DisplayName__c</columns>
        <columns>LBI__PlayType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Play Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Plays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>